kubernetes/chat-ui/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-ui
spec:
  revisionHistoryLimit: 1
  replicas: 5
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      terminationGracePeriodSeconds: 0
      containers:
      - name: chat-ui
        image: chat-ui
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 80Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 2
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 2
          timeoutSeconds: 5
