kubernetes/chat-ui/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: chat-ui
spec:
  ports:
  - name: http
    targetPort: http
    port: 3000
    protocol: TCP
