kubernetes/chat-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ui-external
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "ddns.yuha0.com"
spec:
  ingressClassName: nginx-external
  rules:
  - host: chat.yuha0.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: chat-ui
            port: 
              number: 3000
  tls:
  - hosts:
    - chat.yuha0.com
    secretName: chat-ui-tls-certificate


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ui-internal
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: chat.internal.yuha0.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: chat-ui
            port: 
              number: 3000
